@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-25T08:12:48Z",
+  "timestamp" : "2022-05-25T16:13:10Z",
   "count_outdated" : 227,
   "uniques_outdated" : 11,
-  "count" : 388,
+  "count" : 365,
   "uniques" : 20,
   "views" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 57,
+      "count": 34,
       "count_minmax": [ 3, 60 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
