@@ -1,3 +1,10 @@
+2022-05-25T16:13:10Z:
+* notice: last 14d: unq all: 1 138
+* notice: prev accum: outdated-unq outdated-all / unq all: 11 227 / 20 388
+* notice: next accum: outdated-unq outdated-all / unq all: 11 227 / 20 365
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -23 / +0 +0 -0 -26 / 1 34
+* notice: changed dates: [2022-05-11]
+
 2022-05-25T08:12:48Z:
 * notice: last 14d: unq all: 1 161
 * notice: prev accum: outdated-unq outdated-all / unq all: 11 227 / 20 391
